--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="feedback-section">
         <h2>Feedback Submission</h2>
-        <form action="https://formsubmit.co/9869b7c9bb2a5263bcb2a48f64859c95" method="POST">
+        <form action="https://formsubmit.co/albertphu3@gmail.com" method="POST">
             <input type="text" id="name" name="name" placeholder="Your Name" required>
             <input type="email" id="email" name="email" placeholder="Your Email" required>
             <textarea id="feedback" name="feedback" rows="4" placeholder="Your Feedback" required></textarea>
